Fix on mobile

--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -97,6 +97,15 @@
 }
 
 
+.glightbox-button-hidden {
+    display: none;
+}
+/* Hide mouse-click for images when screen is too small */
+a.no-click-image {
+  cursor: default;
+  pointer-events: none;
+}
+
 /* Wider space for pages */
 .md-grid {
   max-width: 90%;
